force-app/main/default/objects/Proposal__c/fields/Amount_Asked__c.field-meta.xml
<CustomField>
    <fullName>Amount_Asked__c</fullName>
    <label>Amount Asked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>