force-app/main/default/objects/Proposal__c/fields/Amount_Expected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Expected__c</fullName>
    <label>Amount Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>