force-app/main/default/objects/Proposal__c/fields/Date_Asked__c.field-meta.xml
<CustomField>
    <fullName>Date_Asked__c</fullName>
    <label>Date Asked</label>
    <type>Date</type>
</CustomField>