force-app/main/default/objects/Proposal__c/fields/Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>Date_Expected__c</fullName>
    <label>Date Expected</label>
    <type>Date</type>
</CustomField>