force-app/main/default/objects/Proposal__c/fields/Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Name__c</fullName>
    <label>Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>