force-app/main/default/objects/Proposal__c/fields/SMASH_Site_Interest__c.field-meta.xml
<CustomField>
    <fullName>SMASH_Site_Interest__c</fullName>
    <label>SMASH Site Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Fund</fullName>
            </value>
            <value>
                <fullName>Berkely</fullName>
            </value>
            <value>
                <fullName>IIIinois</fullName>
            </value>
            <value>
                <fullName>Morehouse</fullName>
            </value>
            <value>
                <fullName>Stanford</fullName>
            </value>
            <value>
                <fullName>UC Davis</fullName>
            </value>
            <value>
                <fullName>UCLA</fullName>
            </value>
            <value>
                <fullName>Wayne State</fullName>
            </value>
            <value>
                <fullName>Wharton</fullName>
            </value>
            <value>
                <fullName>SMASH Rising</fullName>
            </value>
            <value>
                <fullName>Midwest Region</fullName>
            </value>
            <value>
                <fullName>Bay Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>