force-app/main/default/objects/Proposal__c/fields/Total_Number_Of_Proposals__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Proposals__c</fullName>
    <label>Total Number Of Proposals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>