force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Proposal_Name__c</columns>
    <columns>Amount_Asked__c</columns>
    <columns>Amount_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>